--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -11,6 +11,13 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+    - name: setup
+      run: |
+        make setup
     - name: prepare
       run: |
         make prepare
@@ -23,5 +30,5 @@ jobs:
     - name: testing
       run: |
         cd build
-        cd tests
+        cd bin
         ./unit_tests
