--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -11,9 +11,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
     - name: install
       run: |
-        make install_tests
+        make install
+    - name: setup
+      run: |
+        make setup
     - name: prepare
       run: |
         make prepare
@@ -26,6 +33,6 @@ jobs:
     - name: testing
       run: |
         cd build
-        cd tests
+        cd bin
         ./unit_tests
         bash <(curl -s https://codecov.io/bash)
